probably fix animation issue on iOS

--- a/src/ui/Block/Block.module.css
+++ b/src/ui/Block/Block.module.css
@@ -76,7 +76,7 @@
 }
 
 .selected {
-  @apply -translate-y-6 ease-in-out transition-transform animate-wobble;
+  @apply -translate-y-6 ease-in-out animate-wobble;
 }
 
 .selectedOutline {
